--- a/frontend/edusia/src/global.css
+++ b/frontend/edusia/src/global.css
@@ -37,6 +37,7 @@ select {
 }
 .mainBody {
   width: 100%;
+  overflow-y: scroll
 }
 .innerBody {
   margin: 0 25px 25px 25px;
@@ -51,6 +52,9 @@ select {
 }
 .pictureInput {
   margin: 0 0 20px 0;
+}
+.multipleTextInput {
+  margin: -15px 0 -15px 0;
 }
 .textInput {
   margin: 25px 0 15px 0;
@@ -161,7 +165,15 @@ select {
   font-size: 18px;
   font-weight: 400;
 }
+.homeworkTitle {
+  margin: 25px 0 10px 0;
+  font-family: 'Inter', sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+}
 .header {
+  position: sticky;
+  top: 0;
   display: flex;
   align-items: center;
   height: 70px;
@@ -188,6 +200,8 @@ select {
   align-items: center;
 }
 .toolbar {
+  position: sticky;
+  top: 71px;
   display: flex;
   align-items: center;
   width: 100%;
@@ -581,13 +595,14 @@ select {
   background-color: white;
   border-radius: 15px;
   padding: 0 20px;
-  position: relative;
-  margin: 0 auto;
+  position: fixed;
+  margin: 0 0 25px 0;
+  left: 50%;
+  transform: translate(-50%, 0);
   bottom: 0;
 }
 .messageCardText {
   text-align: center;
-  line-height: 48px;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -601,7 +616,28 @@ select {
   bottom: 0;
 }
 .loginBody {
-  width: 600px;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: fit-content;
+  padding: 25px 0 50px 0;
   background-color: #142843;
   border-radius: 20px;
+}
+.loginForm {
+  margin: 0 auto;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+}
+.middleBody {
+  position: fixed;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%, -50%);;
+}
+.download {
+  font-family: 'Inter', sans-serif;
+  color: #287AC9;
 }
